@@ -1,9 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.212 2006/01/05 01:16:08 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.213 2006/01/06 01:09:57 allanonjl Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
+  5 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
+  Users.py: disable password fields if loading from profile, fix issue where
+  if uid is blank, get error when loading from profile.  fix issue where
+  password box is disabled after modifying and accepting changes for a user
+  loaded from a profile. re-enable switching notebook page when selecting user
+  from list.  Move buttons to upper right.
+  
   4 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
   Timezone.py: fix loading of timezones from installprofile
   due to race condition.
